Get options for jq-questionnaire by data-opt-jq-questionnaire instead of data-opt-hz-questionnaire

--- a/examples/course/sco1221/pages/6611/page.pug
+++ b/examples/course/sco1221/pages/6611/page.pug
@@ -4,7 +4,8 @@ div
     //Caso 2
     +jq-questionnaire({
         attributes:{
-            "data-hz-resource":"HzQuestionnaire"
+            "data-hz-resource":"HzQuestionnaire",
+            "data-opt-jq-questionnaire-immediate-feedback":"true"
         }
     })
         +jq-questionnaire__header
